# DEBE

./: .gitignore  README.md
Baseline/: CMakeLists.txt  README.md  cleanup.sh  config.json  recomplie.sh  setup.sh
Baseline/cmake/: FindLevelDB.cmake  FindSGX.cmake
Baseline/include/: absDaE.h  absIndex.h  absKM.h  absRecvDecoder.h  chunkStructure.h  chunker.h  clientVar.h  configure.h  dataReceiver.h  dataRetriever.h  dataSender.h  dupLESSKM.h  duplessDaE.h  factoryDatabase.h  inMemoryDatabase.h  lruCache.h  messageQueue.h  mleDaE.h  plainDaE.h  plainIndex.h  recvDecoder.h  restoreWriter.h  serverOptThread.h  sslConnection.h  storageCore.h  storeOCall.h  tedDaE.h  tedKM.h
Baseline/key/RSAkey/: server.key
Baseline/key/ca/: ca.key
Baseline/key/certDER/: server.der
Baseline/key/client/: client.crt  client.key
Baseline/key/server/: server.crt  server.key
Baseline/script/: trace_exp.py
Baseline/src/: CMakeLists.txt
Baseline/src/App/: CMakeLists.txt  blindBLS.cc  blindRSA.cc  daeClient.cc  daeServer.cc  keyManager.cc
Baseline/src/Client/: CMakeLists.txt  chunker.cc  dataRetriever.cc  dataSender.cc
Baseline/src/Comm/: CMakeLists.txt
Baseline/src/Database/: factoryDatabase.cc  inMemoryDatabase.cc
Baseline/src/Index/: absIndex.cc  plainIndex.cc
Baseline/src/KeyGen/: CMakeLists.txt  absDaE.cc  duplessDaE.cc  mleDaE.cc  plainDaE.cc  tedDaE.cc
Baseline/src/KeyManager/: CMakeLists.txt  absKM.cc  dupLESSKM.cc  tedKM.cc
Baseline/src/Server/: CMakeLists.txt  absRecvDecoder.cc  dataReceiver.cc  recvDecoder.cc  serverOptThread.cc  storageCore.cc  storeOCall.cc
Baseline/src/Util/: CMakeLists.txt  clientVar.cc  compressGen.cc  configure.cc  murmurHash.cc  readCache.cc
Prototype/: .gitignore  CMakeLists.txt  README.md  ae_instructions.md  cleanup.sh  config.json  setup.sh
Prototype/cmake/: FindSGX.cmake
Prototype/include/: absDatabase.h  absIndex.h  absRecvDecoder.h  chunkStructure.h  clientVar.h  compressGen.h  configure.h  cryptoPrimitive.h  dataReceiver.h  dataRetriever.h  dataSender.h  dataWriter.h  enclaveIndex.h  enclaveRecvDecoder.h  factoryDatabase.h  leveldbDatabase.h  messageQueue.h  raUtil.h  raVerifier.h  readCache.h  serverOptThead.h  sessionKeyExchange.h  storageCore.h
Prototype/include/IAS/: agent.h  agent_wget.h  common.h  crypto.h  hexutil.h  iasrequest.h  json.h  logfile.h
Prototype/include/IAS/httpparser/: response.h
Prototype/key/: init.sh
Prototype/key/RSAkey/: serverpub.key
Prototype/key/ca/: ca.crt
Prototype/key/certDER/: ca.der  client.der
Prototype/script/: gen_zipf_trace.sh  trace_exp.py  zipf_case.py
Prototype/script/default/: constVar.h  reset_default.sh
Prototype/script/exp1/: dataWriter.cc  exp1_pre.sh  storeEnclave.config.xml
Prototype/script/exp2/: constVar.h  exp2_pre.sh  restoreWriter.cc
Prototype/script/exp3/: constVar.h  exp3_pre.sh  storeEnclave.config.xml
Prototype/script/exp4/: constVar.h  dataWriter.cc  exp4_pre.sh  storeEnclave.config.xml
Prototype/script/exp5/: exp5_pre.sh
Prototype/script/exp6/: exp6_pre.sh
Prototype/script/trace/: get_container.py  get_linux.py
Prototype/src/: CMakeLists.txt
Prototype/src/App/: CMakeLists.txt  dbeClient.cc  dbeServer.cc  synCompress.cc
Prototype/src/Client/: CMakeLists.txt  chunker.cc  dataRetriever.cc  dataSender.cc  raVerifier.cc  sessionKeyExchange.cc
Prototype/src/Comm/: sslConnect.cc
Prototype/src/Database/: CMakeLists.txt  leveldbDatabase.cc
Prototype/src/Enclave/: CMakeLists.txt  storeEnclave.edl
Prototype/src/Enclave/ecallSrc/ecall/: RAECall.cc  keyECall.cc  restoreECall.cc  storeECall.cc
Prototype/src/Enclave/ecallSrc/ecallIndex/: ecallExtreme.cc  ecallFreqIndex.cc  ecallInEnclave.cc  ecallOutEnclave.cc  ecallSparse.cc  enclaveBase.cc
Prototype/src/Enclave/ecallSrc/ecallStore/: ecallRecvDecoder.cc  ecallStorage.cc
Prototype/src/Enclave/ecallSrc/ecallUtil/: commonEnclave.cc  ecallCMSketch.cc  ecallClient.cc  ecallEnc.cc  ecallEntryHeap.cc  ecallLz4.cc
Prototype/src/Enclave/include/: RAECall.h  commonEnclave.h  ecallCMSketch.h  ecallClient.h  ecallEnc.h  ecallEntryHeap.h  ecallExtreme.h  ecallFreqIndex.h  ecallInEnclave.h  ecallLz4.h  ecallOutEnclave.h  ecallRecvDecoder.h  ecallSparse.h  ecallStorage.h  enclaveBase.h  keyECall.h  ocallUtil.h  restoreECall.h  storeECall.h  storeOCall.h
Prototype/src/Enclave/ocallSrc/: ocallUtil.cc  storeOCall.cc
Prototype/src/IASUtil/: CMakeLists.txt  agent_wget.cc  base64.c  byteorder.c  common.cc  crypto.c  hexutil.c  iasrequest.cc  json.cc  logfile.c
Prototype/src/Index/: CMakeLists.txt  absIndex.cc  enclaveIndex.cc
Prototype/src/Server/: CMakeLists.txt  absRecvDecoder.cc  dataReceiver.cc  enclaveRecvDecoder.cc  raUtil.cc  serverOptThread.cc  storageCore.cc
Prototype/src/Util/: clientVar.cc  configure.cc  cryptoPrimitive.cc
Sim/: CMakeLists.txt  README.md  cleanup.sh  recompile.sh  setup.sh
Sim/cmake/: FindRocksDB.cmake
Sim/include/: absDatabase.h  absIndex.h  chunkStructure.h  cmSketch.h  constVar.h  cryptoPrimitive.h  define.h  ecallEntryHeap.h  freqIndex.h  inMemoryDatabase.h  leveldbDatabase.h  optSolver.h  randomGen.h  tedIndex.h
Sim/src/: CMakeLists.txt
Sim/src/App/: CMakeLists.txt  main.cc
Sim/src/Database/: absDatabase.cc  inMemoryDatabase.cc  leveldbDatabase.cc
Sim/src/Dedup/: CMakeLists.txt  absIndex.cc  freqIndex.cc  tedIndex.cc
Sim/src/Util/: CMakeLists.txt  cmSketch.cc  murmurHash3.cc  optSolver.cc  randomGen.cc
